<resources>
    <string name="app_name">Medeli</string>
    <string name="emailpassword_status_fmt">emailpassword_status_fmt</string>
    <string name="firebase_status_fmt">firebase_status_fmt</string>
    <string name="sign_with_credential">signInWithCredential:success</string>
    <string name="sign_with_credential_failure">signInWithCredential:failure</string>
    <string name="auth_failed">Authentication Failed.</string>
    <string name="no_id_token">No ID token!</string>
    <string name="goggle_sign_in_failed">Google Sign-in failed</string>
    <string name="welcome_to_medeli">Welcome to Medeli</string>
    <string name="splash_image">splash image</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="skip_for_now">Skip for now</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="google_logo">google logo</string>
    <string name="sign_in_with_email">Sign in with Email</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forgot password?</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_up_with_email">Sign up with Email</string>
    <string name="confirm_password">Confirm password</string>
    <string name="username">Username</string>
    <string name="web_client_id">provide_web_client</string>
    <string name="phone_number">Phone number</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="set_text_in_on_create_method">Set text</string>
    <string name="send_email">Send email</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="logout">Log out</string>
    <string name="loader">loader</string>
    <string name="loading">loading...</string>
    <string name="medeli_pharmacy">Medeli pharmacy</string>
    <string name="disatance">Disatance</string>
    <string name="button">Button</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</string>
    <string name="saved_pharmacies">Saved pharmacies</string>
    <string name="search">Search</string>
    <string name="pharmacy">Pharmacy</string>
    <string name="saved">Saved</string>
    <string name="nearest">Nearest</string>
    <string name="open_map">Open map</string>
    <string name="find_new_pharmacies">Find new pharmacies</string>
    <string name="easily_browse_on_map">Easily browse on map</string>
    <string name="store">storeforent</string>
    <string name="call">Call</string>
    <string name="view">View</string>
    <string name="chat">Chat</string>
    <string name="fav">Favorite</string>
    <string name="share">Share</string>
    <string name="heading_home">Place your order select \n pharmacy recive it</string>
    <string name="claim_or_prescription">Claim or prescription</string>
    <string name="orderic">orderIc</string>
    <string name="pharmacist">Pharmacist assistant</string>
    <string name="add">Add</string>
    <string name="product">Product picture</string>
    <string name="profile">Profie</string>
    <string name="_52">$ 52</string>
    <string name="_68_in_stock">68 in stock</string>
    <string name="_4">0</string>
    <string name="evy_body">Evy body</string>
    <string name="minus">minus</string>
    <string name="details">Details</string>
    <string name="products">Products</string>
    <string name="mom_and_baby">Mom and baby</string>
    <string name="add_your_insurance">Add your insurance</string>
    <string name="to_use_it_in_your_upcoming_orders">to use it in your upcoming orders</string>
    <string name="categories">Categories</string>
    <string name="nothing_to_show_here_n">Nothing to show here \n 😩</string>
    <string name="later_implementation">Later Implementation 😋</string>
    <string name="hello">Hello</string>
    <string name="cart">Cart</string>
    <string name="sign">$</string>
    <string name="notification">Notification</string>
    <string name="first_aid">First aid</string>
</resources>