<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/savedFragment">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.peacecodetech.medeli.ui.main.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_pharmacy"
        android:name="com.peacecodetech.medeli.ui.main.pharmacy.PharmacyFragment"
        android:label="@string/pharmacy"
        tools:layout="@layout/fragment_pharmacy" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.peacecodetech.medeli.ui.main.search.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search" />
    <fragment
        android:id="@+id/nearestFragment"
        android:name="com.peacecodetech.medeli.ui.main.pharmacy.NearestFragment"
        android:label="fragment_nearest"
        tools:layout="@layout/fragment_nearest" />
    <fragment
        android:id="@+id/savedFragment"
        android:name="com.peacecodetech.medeli.ui.main.pharmacy.SavedFragment"
        android:label="fragment_saved"
        tools:layout="@layout/fragment_saved" />
</navigation>