<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/cardBgColor"
    android:layout_margin="@dimen/_5sdp"
    app:cardCornerRadius="@dimen/_10sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="@dimen/_140sdp"
        android:layout_gravity="center"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/productCard"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/_5sdp"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/windowBackground"
            app:cardCornerRadius="@dimen/_5sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:id="@+id/productContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp">

                <ImageView
                    android:id="@+id/imgProduct"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_60sdp"
                    android:contentDescription="@string/product"
                    android:src="@drawable/product" />

                <ImageView
                    android:id="@+id/favorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="-5dp"
                    android:contentDescription="@string/fav"
                    android:src="@drawable/unfavorited" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/nexa_bold"
            android:gravity="center"
            android:lineHeight="@dimen/_20sdp"
            android:paddingStart="@dimen/_5sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:text="@string/_52"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/productCard" />

        <TextView
            android:id="@+id/productName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nexa_bold"
            android:lines="2"
            android:ellipsize="end"
            android:gravity="start"
            android:text="@string/evy_body"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintStart_toStartOf="@+id/price"
            app:layout_constraintTop_toBottomOf="@+id/price" />

        <TextView
            android:id="@+id/qnty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineHeight="@dimen/_10sdp"
            android:text="@string/_4"
            android:fontFamily="@font/nexa_bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/imageView5"
            app:layout_constraintHorizontal_bias="0.66"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/stockValue" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/minus"
            app:layout_constraintBottom_toBottomOf="@+id/qnty"
            app:layout_constraintEnd_toStartOf="@+id/qnty"
            app:layout_constraintTop_toTopOf="@+id/qnty"
            app:layout_constraintVertical_bias="0.52"
            app:srcCompat="@drawable/img_minus" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:contentDescription="@string/add"
            app:layout_constraintBottom_toBottomOf="@+id/qnty"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/qnty"
            app:layout_constraintVertical_bias="0.52"
            app:srcCompat="@drawable/img_add" />

        <TextView
            android:id="@+id/stockValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp"
            android:fontFamily="@font/nexa_light"
            android:lineHeight="@dimen/_10sdp"
            android:text="@string/_68_in_stock"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="@+id/productName"
            app:layout_constraintTop_toBottomOf="@+id/productName" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>